--- a/Resources/views/Theme/layout.html.twig
+++ b/Resources/views/Theme/layout.html.twig
@@ -42,7 +42,7 @@
           <a class="brand" href="#">Project name</a>
           <div class="nav-collapse">
               
-            {{ knp_menu_render('HotDesignScThemeBundle:Builder:mainMenu', {currentClass: 'active' }) }}
+            {{ knp_menu_render(':Builder:mainMenu', {currentClass: 'active' }) }}
                  
           </div><!--/.nav-collapse -->
         </div>
